# wasm-bullet-svelte

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: app.d.ts  app.html
src/@types/: event.ts
src/components/atoms/: Alert.svelte  IconButton.svelte  Input.svelte  Modal.svelte
src/components/molecules/: InputForm.svelte
src/components/organisms/: SectionPanel.svelte
src/lib/wasm/: Cargo.toml
src/lib/wasm/src/: core.rs  lib.rs  utils.rs
src/lib/wasm/src/core/: disk.rs  event.rs  game.rs  render.rs  schedule.rs  setting.rs
src/lib/wasm/src/utils/: boundrect.rs  coordinate.rs  dom.rs  log.rs  vec2d.rs
src/lib/wasm/src/web_interface/: canvas.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/my-bullets/: +page.svelte
src/routes/my-bullets/[my_bullet_id]/: +page.svelte
