[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.44"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.44"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "WebGlRenderingContext",
  "CanvasRenderingContext2d",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlUniformLocation",
  "EventListener",
  "EventTarget",
  "MouseEvent",
]